--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
     "name": "outrightmental-web",
-    "version": "0.0.1",
-
+    "version": "0.0.1-1",
     "title": "The Outright Mental Web Application",
     "authors": [
         {
             "name": "Nick Kaye",
             "email": "nick@outrightmental.com"
-        }   ,
+        },
         {
             "name": "Pete Van Dyke",
             "email": "pete@outrightmental.com"
         }
     ],
     "description": "Node.js Web Service & HTML5 Frontend",
-
     "homepage": "https://github.com/outrightmental/outrightmental-web",
     "repository": {
         "type": "git",
@@ -33,7 +31,6 @@
     "keywords": [
         "Outright Mental"
     ],
-
     "domains": [
         "app.outrightmental.com"
     ],
