--- a/bower.json
+++ b/bower.json
@@ -28,37 +28,23 @@
         }
     ],
 
-    "private": true,
-    "keywords": [
-        "Outright Mental"
-    ],
-    "domains": [
-        "app.outrightmental.com"
-    ],
-    "scripts": {
-        "start": "node app.js",
-        "test": "grunt --verbose"
-    },
     "dependencies": {
-        "express": "3.0.x",
-        "jade": "*"
+        "bootstrap": "latest",
+        "bootstrap-js-dropdown": "latest",
+        "es5-shim": "latest",
+        "font-awesome": "latest",
+        "history.js": "latest",
+        "jquery": "latest",
+        "jquery-ui": "latest",
+        "jquery.cookie": "latest",
+        "json3": "latest",
+        "modernizr": "latest",
+        "momentjs": "latest",
+        "requirejs": "~2.1.5",
+        "requirejs-i18n": "~2.0.2",
+        "requirejs-text": "~2.0.5",
+        "underscore-amd": "~1.4.4"
     },
     "devDependencies": {
-        "grunt-cli": "~0.1.9",
-        "grunt": "~0.4.1",
-        "grunt-bower-task": "0.3.2",
-        "grunt-contrib-uglify": "~0.2.4",
-        "grunt-contrib-htmlmin": "~0.1.3",
-        "grunt-contrib-cssmin": "~0.6.1",
-        "grunt-contrib-less": "~0.7.0",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-jshint": "~0.6.4",
-        "grunt-contrib-qunit": "~0.2.2",
-        "grunt-contrib-watch": "~0.5.3"
-    },
-    "analyze": false,
-    "subdomain": "outrightmental-web",
-    "engines": {
-        "node": "0.10.x"
     }
 }
