--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "findit2": "~0.2.0",
         "jade": "~0.35.0",
         "jshint": "~2.1.11",
+        "node-logentries": "0.0.2",
         "mongoose": "~3.6.20",
         "passport": "~0.1.17",
         "passport-local": "~0.1.6",
