--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "outrightmental-web",
+    "name": "om-web",
     "version": "0.0.1-1",
     "title": "The Outright Mental Web Application",
     "authors": [
