--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "outrightmental-web",
+    "name": "om-web",
     "version": "0.0.1-31",
     "title": "The Outright Mental Web Application",
     "authors": [
@@ -56,7 +56,7 @@
         "watchr": "~2.4.4"
     },
     "analyze": false,
-    "subdomain": "outrightmental-web",
+    "subdomain": "om-web",
     "engines": {
         "node": "0.10.x"
     }
