P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
 
     "dependencies": {
         "bootstrap": "latest",
+        "countdown.js": "latest",
         "html5shiv": "latest",
         "font-awesome": "latest",
         "history.js": "latest",
@@ -35,7 +36,6 @@
         "json3": "latest",
         "modernizr": "latest",
         "momentjs": "latest",
-        "moment-countdown" :"latest",
         "requirejs": "latest",
         "requirejs-i18n": "latest",
         "requirejs-text": "latest",
