--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     ],
     "scripts": {
         "start": "node app.js",
-        "postinstall": "node run.js build"
+        "postinstall": "grunt"
     },
     "dependencies": {
         "async": "~0.2.9",
@@ -53,17 +53,17 @@
         "uglify-js": "~2.4.0",
         "watchr": "~2.4.4"
     },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.8.2",
-    "grunt-concurrent": "~0.4.1",
-    "grunt-nodemon": "~0.1.2",
-    "grunt-newer": "~0.6.0"
-  }
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-contrib-uglify": "~0.2.7",
+        "grunt-contrib-jshint": "~0.7.2",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-less": "~0.8.2",
+        "grunt-concurrent": "~0.4.1",
+        "grunt-nodemon": "~0.1.2",
+        "grunt-newer": "~0.6.0"
+    },
     "analyze": false,
     "subdomain": "om-web",
     "engines": {
