--- a/package.json
+++ b/package.json
@@ -1,71 +1,61 @@
 {
-    "name": "om-web",
-    "version": "0.0.1-45",
-    "title": "The Outright Mental Web Application",
-    "authors": [
-        {
-            "name": "Nick Kaye",
-            "email": "nick@outrightmental.com"
-        }
-    ],
-    "description": "Node.js Web Service & HTML5 Frontend",
-    "homepage": "https://github.com/outrightmental/om-web",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/outrightmental/om-web"
-    },
-    "bugs": {
-        "url": "https://github.com/outrightmental/om-web/issues"
-    },
-    "licenses": [
-        {
-            "type": "MIT",
-            "url": "https://github.com/outrightmental/om-web/blob/master/LICENSE"
-        }
-    ],
-    "private": true,
-    "keywords": [
-        "Outright Mental"
-    ],
-    "domains": [
-        "app.outrightmental.com"
-    ],
-    "scripts": {
-        "start": "node app.js",
-        "postinstall": "grunt"
-    },
-    "dependencies": {
-        "async": "~0.2.9",
-        "connect-mongo": "~0.3.3",
-        "emailjs": "~0.3.6",
-        "express": "~3.4.1",
-        "i18n": "0.4.1",
-        "jade": "~0.35.0",
-        "node-logentries": "0.0.2",
-        "mongoose": "~3.6.20",
-        "passport": "~0.1.17",
-        "passport-local": "~0.1.6",
-        "passport-oauth": "~1.0.0",
-        "passport-facebook": "~1.0.2",
-        "passport-github": "~0.1.5",
-        "passport-twitter": "~1.0.2",
-        "recess": "~1.1.9",
-        "uglify-js": "~2.4.0",
-        "watchr": "~2.4.4"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-uglify": "~0.2.7",
-        "grunt-contrib-jshint": "~0.7.2",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-less": "~0.8.2",
-        "grunt-concurrent": "~0.4.1",
-        "grunt-nodemon": "~0.1.2",
-        "grunt-newer": "~0.6.0"
-    },
-    "subdomain": "om-web",
-    "engines": {
-        "node": "0.10.x"
+  "name": "om-web",
+  "version": "0.0.1-45",
+  "title": "The Outright Mental Web Application",
+  "authors": [
+    {
+      "name": "Nick Kaye",
+      "email": "nick@outrightmental.com"
     }
+  ],
+  "description": "Node.js Web Service & HTML5 Frontend",
+  "homepage": "https://github.com/outrightmental/om-web",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/outrightmental/om-web"
+  },
+  "bugs": {
+    "url": "https://github.com/outrightmental/om-web/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/outrightmental/om-web/blob/master/LICENSE"
+    }
+  ],
+  "private": true,
+  "keywords": [
+    "Outright Mental"
+  ],
+  "domains": [
+    "app.outrightmental.com"
+  ],
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "async": "~0.2.9",
+    "connect-mongo": "~0.4.0",
+    "emailjs": "~0.3.6",
+    "express": "~3.4.4",
+    "jade": "~0.35.0",
+    "mongoose": "~3.8.1",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "passport-oauth": "~1.0.0",
+    "passport-facebook": "~1.0.2",
+    "passport-github": "~0.1.5",
+    "passport-twitter": "~1.0.2"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-less": "~0.8.2",
+    "grunt-concurrent": "~0.4.1",
+    "grunt-nodemon": "~0.1.2",
+    "grunt-newer": "~0.6.0"
+  }
 }
