--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "Outright Mental"
   ],
   "domains": [
-    "app.outrightmental.com"
+    "app.outrightmental.com",
+    "om-web.jit.su"
   ],
+  "subdomain": "om-web",
   "scripts": {
     "start": "node app.js"
   },
@@ -38,6 +40,7 @@
     "connect-mongo": "~0.4.0",
     "emailjs": "~0.3.6",
     "express": "~3.4.4",
+    "i18n" :"~0.4.1",
     "jade": "~0.35.0",
     "mongoose": "~3.8.1",
     "passport": "~0.1.17",
@@ -57,5 +60,8 @@
     "grunt-concurrent": "~0.4.1",
     "grunt-nodemon": "~0.1.2",
     "grunt-newer": "~0.6.0"
+  },
+  "engines": {
+    "node": "v0.10.x"
   }
 }
