--- a/package.json
+++ b/package.json
@@ -40,15 +40,17 @@
     "connect-mongo": "~0.4.0",
     "emailjs": "~0.3.6",
     "express": "~3.4.4",
-    "i18n" :"~0.4.1",
+    "i18n": "~0.4.1",
     "jade": "~0.35.0",
     "mongoose": "~3.8.1",
     "passport": "~0.1.17",
+    "uglify-js": "~2.2.5",
     "passport-local": "~0.1.6",
     "passport-oauth": "~1.0.0",
     "passport-facebook": "~1.0.2",
     "passport-github": "~0.1.5",
-    "passport-twitter": "~1.0.2"
+    "passport-twitter": "~1.0.2",
+    "pkginfo": "~0.2.x"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
