--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "i18n": "~0.4.1",
     "jade": "~0.35.0",
     "mongoose": "~3.8.1",
+	"node-logentries": "0.1.2",
     "passport": "~0.1.17",
     "uglify-js": "~2.2.5",
     "passport-local": "~0.1.6",
